# numen

./: .gitignore  AGENT.md  Cargo.toml  README.md  numen_gui.py  pyproject.toml
src/: currency.rs  eval.rs  grammar.pest  lib.rs  parser.rs  units.rs
