[package]
name = "numen_engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "numen_engine"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21.2", features = ["extension-module"] }
pest = "2.7.11"
pest_derive = "2.7.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
